k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: production
  labels:
    app: go-api
spec:
  selector:
    app: go-api

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
